<resources>
    <string name="app_name">SmartHome</string>
    <string name="app_view_name">Smart Home prijava</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtRegister">Dont have account yet? Register here.</string>
    <string name="houses">Sample house</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
