<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:background="#ffffff"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/surname"
        android:background="#ffffff"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:background="#ffffff"
        android:paddingLeft="30dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="#ffffff"
        android:paddingLeft="30dp"
        android:password="false" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/repeatPassword"
        android:background="#ffffff"
        android:paddingLeft="30dp"
        android:password="false" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnRegister"
        android:textColor="@color/accent"
        android:backgroundTint="#ffffff"
        android:background="#ffffff"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:textSize="16dp" />


</LinearLayout>